--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,28 @@ body {
   font-family: "Work Sans", sans-serif;
 }
 
+#clover0 {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  width: 100px;
+  height: 100px;
+}
+#clover1 {
+  position: absolute;
+  bottom: 50px;
+  right: 30px;
+  width: 100px;
+  height: 100px;
+}
+#clover2 {
+  position: absolute;
+  bottom: 0px;
+  right: 60px;
+  width: 100px;
+  height: 100px;
+}
+
 .container {
   height: 100vh;
   width: 100vh;
